--- a/src/main/resources/templates/leilao/index.html
+++ b/src/main/resources/templates/leilao/index.html
@@ -13,10 +13,10 @@
 				<span th:text="${message}"></span>
 			</div>
 	
-			<table class="table table-hover">
+			<table id="tabela-leiloes" class="table table-hover">
 				<thead>
 					<tr>
-						<th scope="col">Nome</th>
+						<th scope="col">Nome</th> 
 						<th scope="col">Data de abertura</th>
 						<th scope="col">Valor inicial</th>
 						<th scope="col">Usuario</th>
