--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 						<input id="password" type="password" name="password" class="form-control" placeholder="senha">
 					</div>
 
-					<button class="btn btn-primary" type="submit">Login</button>
+					<button id="submit" class="btn btn-primary" type="submit">Login</button>
 				</form>
 			</div>
 		</div>
